# ecoverse

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  start.sh
.claude/: settings.local.json
.github/: copilot-instructions.md
backend/: .env.example  requirements.txt
backend/app/: __init__.py  database.py  main.py  main_old.py
backend/app/core/: config.py
backend/app/models/: models.py
backend/app/services/: __init__.py  ai_agents.py  carbon_calculator.py  dataset_processor.py  enhanced_dataset_processor.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  page_old.tsx
frontend/src/components/: ActivityForm.tsx  Dashboard.tsx  EnhancedAIAnalysis.tsx  EnhancedActivityForm.tsx  EnhancedDatasetAnalysis.tsx  InsightCard.tsx  InsightCard_old.tsx  RecommendationCard.tsx  Toast.tsx  ToastProvider.tsx
frontend/src/services/: api.ts  api_old.ts
